# MacroQuadDoom

./: .gitignore  Cargo.toml  README.md
src/: behavior.rs  file_system.rs  game.rs  level.rs  main.rs  movement.rs  parser.rs  player.rs  render.rs  temp.rs  vector.rs
src/behavior/: parse_behavior.rs
src/level/: level_actor.rs  level_behavior.rs  level_bsp.rs  level_elements.rs  level_light.rs  level_lightmap.rs  level_load.rs  level_mesh.rs  level_poly.rs  level_portal.rs  level_texture.rs
src/parser/: parse_graphics.rs  parse_level.rs
