[package]
name = "macroquad_doom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitreader = "0.3.6"
macroquad = "0.3.25"
bitflags = "2.2.1"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
num_enum = "0.6.1"